--- a/src/.env.example
+++ b/src/.env.example
@@ -1,6 +1,6 @@
 USERNAME=username
 UI_PORT=9292
-UI_SERVICE_VERSION=1.0
-POST_SERVICE_VERSION=1.0
-COMMENT_SERVICE_VERSION=1.0
-COMPOSE_PROJECT_NAME=project_name
+UI_VERSION=1.0
+POST_VERSION=1.0
+COMMENT_VERSION=1.0
+COMPOSE_PROJECT_NAME=project
